baml_language/crates/baml_ide_tests/test_files/syntax/class/invalid_type_aliases.baml
class One {
  f int
}

// Already existing name.
type One = int

// Unexpected keyword.
typpe Two = float

// Unknown identifier.
type Three = i

// Unknown identifier in union.
type Four = int | string | b

// error: Error validating: Unexpected keyword used in assignment: typpe
//   -->  class/invalid_type_aliases.baml:9
//    | 
//  8 | // Unexpected keyword.
//  9 | typpe Two = float
//    | 
// error: The class "One" cannot be re-defined because a type_alias with that name already exists.
//   -->  class/invalid_type_aliases.baml:1
//    | 
//    | 
//  1 | class One {
//    | 
//   -->  class/invalid_type_aliases.baml:6
//    | 
//  5 | // Already existing name.
//  6 | type One = int
//    | 
// error: The type_alias "One" cannot be re-defined because a class with that name already exists.
//   -->  class/invalid_type_aliases.baml:6
//    | 
//  5 | // Already existing name.
//  6 | type One = int
//    | 
//   -->  class/invalid_type_aliases.baml:1
//    | 
//    | 
//  1 | class One {
//    | 
// error: Error validating: Type alias points to unknown identifier `i`
//   -->  class/invalid_type_aliases.baml:12
//    | 
// 11 | // Unknown identifier.
// 12 | type Three = i
//    | 
// error: Error validating: Type alias points to unknown identifier `b`
//   -->  class/invalid_type_aliases.baml:15
//    | 
// 14 | // Unknown identifier in union.
// 15 | type Four = int | string | b
//    |

//----
//- diagnostics
// Error: Unknown keyword 'typpe'. Did you mean 'type'? Usage: type Name = expression
//    в•ӯв”Җ[ class_invalid_type_aliases.baml:9:1 ]
//    в”Ӯ
//  9 в”Ӯ typpe Two = float
//    в”Ӯ в”Җв”Җв”¬в”Җв”Җ  
//    в”Ӯ   в•°в”Җв”Җв”Җв”Җ Unknown keyword 'typpe'. Did you mean 'type'? Usage: type Name = expression
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0010
// в”Җв”Җв”Җв•Ҝ
// Error: Duplicate class `One`
//    в•ӯв”Җ[ class_invalid_type_aliases.baml:1:7 ]
//    в”Ӯ
//  1 в”Ӯ class One {
//    в”Ӯ       в”Җв”¬в”Җ  
//    в”Ӯ        в•°в”Җв”Җв”Җ class `One` redefined here
//    в”Ӯ 
//  6 в”Ӯ type One = int
//    в”Ӯ      в”Җв”¬в”Җ  
//    в”Ӯ       в•°в”Җв”Җв”Җ `One` first defined in class_invalid_type_aliases.baml
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0011
// в”Җв”Җв”Җв•Ҝ
// Error: Duplicate type alias `One`
//    в•ӯв”Җ[ class_invalid_type_aliases.baml:6:6 ]
//    в”Ӯ
//  6 в”Ӯ type One = int
//    в”Ӯ      в”Җв”¬в”Җ  
//    в”Ӯ       в•°в”Җв”Җв”Җ type alias `One` redefined here
//    в”Ӯ
//    в”ңв”Җ[ class_invalid_type_aliases.baml:6:6 ]
//    в”Ӯ
//  1 в”Ӯ class One {
//    в”Ӯ       в”Җв”¬в”Җ  
//    в”Ӯ        в•°в”Җв”Җв”Җ `One` first defined in class_invalid_type_aliases.baml
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0011
// в”Җв”Җв”Җв•Ҝ
